<resources>
    <string name="app_name">MyApp</string>
    <string name="exit">EXIT</string>
    <string name="homework_6">HOMEWORK 6</string>

    <string name="homework_7">HOMEWORK 7 – 9</string>
    <string name="homework_7_start">START</string>
    <string name="homework_7_timer">Click START</string>
    <string name="homework_7_close">CLOSE</string>
    <string name="homework_7_enter_name">Enter name</string>
    <string name="homework_7_enter_password">Enter password</string>
    <string name="homework_7_name">Name:</string>
    <string name="homework_7_password">Password:</string>
    <string name="homework_7_user_information">User information</string>
    <string name="homework_7_user_enter">ENTER</string>
    <string name="homework_7_password_invalid">"Invalid username or password"</string>

    <string name="back">BACK</string>

    <string name="flag_poland">Flag Poland</string>
    <string name="flag_germany">Flag Germany</string>
    <string name="flag_france">Flag France</string>
    <string name="flag_latvia">Flag Latvia</string>
    <string name="flag_finland">Flag Finland</string>

    <string name="homework_10">HOMEWORK 10 – 11</string>
    <string name="homework_12">HOMEWORK 12</string>
    <string name="homework_13">HOMEWORK 13</string>
    <string name="homework_16">HOMEWORK 16</string>
    <string name="homework_17">HOMEWORK 17</string>
    <string name="homework_18">HOMEWORK 18</string>
    <string name="homework_19">HOMEWORK 19</string>
    <string name="next_fragment">NEXT FRAGMENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="candy_info"> Бренд конфеты: %sШтрихкод конфеты: %d </string>

    <string name="hint_enter_message">Введите сообщение</string>
    <string name="hint_message">Пустое сообщение</string>
    <string name="hint_id">Id</string>
    <string name="hint_symbol">Symbol</string>
    <string name="hint_name">Name</string>
    <string name="hint_time">09.07.2021.17:32</string>

    <string name="hint_count">Введите целое число</string>
    <string name="currency_info_message">Введите целое положительное число и попробуйте снова</string>
    <string name="sort_name">Сортировать по имени </string>

    <string name="alarm">БУДИЛЬНИК</string>
    <string name="add_new_alarm">"Будильник создан"</string>
    <string name="content_text_alarm">ВСТАВАЙ!</string>
    <string name="confirm">СТАРТ</string>

    <string name="winter_speed">Ветер м/c</string>
    <string name="widget_name">Погода</string>
    <string name="widget_text">Tекст в погоде</string>
</resources>