<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".homework17.CurrencyActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_currency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cb_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/sort_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_count"
        app:layout_constraintEnd_toEndOf="@+id/edit_count"
        app:layout_constraintStart_toStartOf="@+id/edit_count" />

    <EditText
        android:id="@+id/edit_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_count"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/purple_600"
        android:text="@string/homework_7_start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/edit_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cb_name" />

</androidx.constraintlayout.widget.ConstraintLayout>