<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homework6.Homework6Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/flag_poland"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/flag_germany"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yellow" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/flag_france"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/purple_700" />

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/red" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/flag_latvia"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/red_latvia" />

            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/flag_finland"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@color/purple_700" />

            <View
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:background="@color/purple_700" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/purple_200"
            android:text="@string/btn_back"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</ScrollView>